# bizwiz

./: README.md  pyproject.toml  setup.py
bizwiz/: __init__.py  charter.py  compose_email.py  datatools.py  dbmanager.py  filetools.py
src/bizwiz_sm/: __init__.py  charts.py  email.py  files.py  flat_file.py  html_table
